--- a/src/app/components/home/nav.comp.css
+++ b/src/app/components/home/nav.comp.css
@@ -17,7 +17,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
 }
 
 .nav .nav-links {
